[package]
name = "perlin2"
description = "Minimal 2D perlin noise"
version = "0.1.0"
edition = "2021"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/perlin2.git"
repository = "https://github.com/gridbugs/perlin2.git"
documentation = "https://docs.rs/perlin2"

[features]
serialize = ["serde"]

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["serde_derive"], optional = true }

[dev-dependencies]
rand_xorshift = "0.3"
